atualização dos desafios

--- a/3411-praticando-logica-projeto_inicial/carrinho-compras/index.html
+++ b/3411-praticando-logica-projeto_inicial/carrinho-compras/index.html
@@ -45,6 +45,24 @@
           </section>
         </section>
       </form>
+      <!--2. Crie um formulário simples com campos de entrada e utilize JavaScript para recuperar os valores digitados nos campos usando a propriedade value. Exiba os valores no console e na tela.-->
+      <!--<br>
+      <form id="meuForm">
+        <label for="campoNome">Nome:</label>
+        <input type="text" id="campoNome" name="nome">
+
+        <label for="campoIdade">Idade:</label>
+        <input type="text" id="campoIdade" name="idade">
+
+        <button type="button" onclick="capturarValores()">Capturar Valores</button>
+
+        <div id='mostraNome'><span>Seu nome e idade irão aparecer aqui.</span></div>
+      </form>-->
+
+      <!--<br>
+      <p id="textoModificado">Texto original</p>
+      <button onclick="modificar()"type="button" class="botao-form botao-modificar">Modificar Conteúdo</button>
+      </br>-->
     </section>
     <section class="carrinho">
       <img src="./assets/carrinho-cinza.svg" alt="Imagem de um carrinho de compras cinza">
